--- a/UnturnedAssetSpec/UnturnedAssetSpec.csproj
+++ b/UnturnedAssetSpec/UnturnedAssetSpec.csproj
@@ -6,6 +6,8 @@
 		<LangVersion>preview</LangVersion>
 
 		<RootNamespace>DanielWillett.UnturnedDataFileLspServer.Data</RootNamespace>
+
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -16,6 +18,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="System.Text.Json" Version="4.7.2" />
+	  <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
   </ItemGroup>
 
 	<ItemGroup>
