--- a/UnturnedAssetSpec/UnturnedAssetSpec.csproj
+++ b/UnturnedAssetSpec/UnturnedAssetSpec.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="System.Text.Json" Version="4.7.2" />
+	  <PackageReference Include="Microsoft.Win32.Registry" Version="4.4.0" />
 	  <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
   </ItemGroup>
 
