--- a/LspServer/LspServer.csproj
+++ b/LspServer/LspServer.csproj
@@ -12,11 +12,20 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		
+
 		<PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.9" />
 
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.4" />
+		<PackageReference Include="System.Threading.Channels" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.4" />
+
+		<PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1"/>
+		<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+
     <ProjectReference Include="../UnturnedAssetSpec/UnturnedAssetSpec.csproj" />
 	</ItemGroup>
 
