--- a/UnturnedAssetSpec/UnturnedAssetSpec.csproj
+++ b/UnturnedAssetSpec/UnturnedAssetSpec.csproj
@@ -8,6 +8,8 @@
 		<RootNamespace>DanielWillett.UnturnedDataFileLspServer.Data</RootNamespace>
 
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+		<DefineConstants>$(DefineConstants);EMIT</DefineConstants>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -17,7 +19,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="System.Text.Json" Version="6.0.0" NoWarn="NU1903" />
+	  <PackageReference Include="System.Text.Json" Version="4.7.1" />
+	  <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" Condition="$(DefineConstants.Contains('EMIT'))" />
 	  <PackageReference Include="Microsoft.Win32.Registry" Version="4.4.0" />
 	  <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
   </ItemGroup>
