Added priorities and a window showing all relevant asset properties.

--- a/Asset Spec/sdg.unturned.dialogueasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.dialogueasset, assembly-csharp.json
@@ -12,7 +12,8 @@
             "Key": "Bypass_ID_Limit",
             "Type": "Flag",
             "DefaultValue": false,
-            "Description": "Allows IDs to be less than 2000 if this isn't the vanilla bundle."
+            "Description": "Allows IDs to be less than 2000 if this isn't the vanilla bundle.",
+            "Priority": -1
         },
         {
             "Key": "Messages",
@@ -37,7 +38,8 @@
             ],
             "Description": "A message presented by the NPC. Messages are the entry-point of a dialogue, where the first message that passes it's condition check is shown to the player.",
             "Variable": "pages",
-            "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#messages"
+            "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#messages",
+            "Priority": -1
         },
         {
             "Key": "Responses",
@@ -61,7 +63,8 @@
             ],
             "Description": "A response to the NPC's message. Messages can reference responses by index to indicate which responses are shown per message.",
             "Variable": "pages",
-            "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#responses"
+            "Docs": "https://docs.smartlydressedgames.com/en/stable/npcs/dialogue-asset.html#responses",
+            "Priority": -1
         }
     ],
     "Types":
