--- a/Asset Spec/sdg.unturned.masterbundleconfig, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.masterbundleconfig, assembly-csharp.json
@@ -20,7 +20,8 @@
             "Type": "String",
             "Required": true,
             "Description": "Defines the path in Unity to the master bundle's folder.",
-            "Variable": "assetPrefix"
+            "Variable": "assetPrefix",
+            "Priority": 1
         },
         {
             "Key": "Master_Bundle_Version",
