--- a/Asset Spec/sdg.unturned.itembarricadeasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itembarricadeasset, assembly-csharp.json
@@ -13,7 +13,8 @@
             "Type": "Boolean",
             "Description": "Whether or not this barricade defines a 'Clip' prefab in Unity.",
             "Docs": "https://docs.smartlydressedgames.com/en/stable/items/barricade-asset.html#barricade-asset-properties",
-            "DefaultValue": true
+            "DefaultValue": true,
+            "Priority": 2
         },
         {
             "Key": "PlacementPreviewPrefab",
@@ -21,7 +22,8 @@
             "ElementType": "UnityEngine.GameObject, UnityEngine.CoreModule",
             "DefaultValue": null,
             "Variable": "placementPreviewRef",
-            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/barricade-asset.html#barricade-asset-properties"
+            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/barricade-asset.html#barricade-asset-properties",
+            "Priority": 2
         },
         {
             "Key": "PlacementAudioClip",
@@ -29,14 +31,16 @@
             "ElementType": "UnityEngine.AudioClip, UnityEngine.AudioModule",
             "DefaultValue": null,
             "Variable": "use",
-            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/barricade-asset.html#barricade-asset-properties"
+            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/barricade-asset.html#barricade-asset-properties",
+            "Priority": 2
         },
         {
             "Key": "Build",
             "Type": "SDG.Unturned.EBuild, Assembly-CSharp",
             "Required": true,
             "Variable": "build",
-            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/barricade-asset.html#barricade-asset-properties"
+            "Docs": "https://docs.smartlydressedgames.com/en/stable/items/barricade-asset.html#barricade-asset-properties",
+            "Priority": 2
         }
     ],
     "Types":
