A lot of progress on making file tracking use an incremental file tracker.

--- a/UnturnedAssetSpecTests/UnturnedAssetSpecTests.csproj
+++ b/UnturnedAssetSpecTests/UnturnedAssetSpecTests.csproj
@@ -1,26 +1,40 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+      
+
+    <EnableStaticNativeInstrumentation>False</EnableStaticNativeInstrumentation>
+    <EnableDynamicNativeInstrumentation>False</EnableDynamicNativeInstrumentation>
+    
+    <RunSettingsFilePath>$(MSBuildProjectDirectory)\..\test.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="17.13.0" />
     <PackageReference Include="NUnit" Version="4.3.2" />
     <PackageReference Include="NUnit.Analyzers" Version="4.7.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
 
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.5" />
+
     <ProjectReference Include="../UnturnedAssetSpec/UnturnedAssetSpec.csproj" />
+    <ProjectReference Include="../LspServer/LspServer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
+
+  <Target Name="RemoveTestResults" AfterTargets="Clean">
+    <RemoveDir Directories="$(MSBuildProjectDirectory)\..\TestResults\" Condition="Exists('$(MSBuildProjectDirectory)\..\TestResults\')" />
+  </Target>
 
 </Project>
