--- a/Asset Spec/sdg.unturned.itemplaceableasset, assembly-csharp.json
+++ b/Asset Spec/sdg.unturned.itemplaceableasset, assembly-csharp.json
@@ -1,13 +1,15 @@
 {
-    "$schema": "https://raw.githubusercontent.com/DanielWillett/unturned-asset-file-vscode/master/Asset%20Spec/Asset%20Spec%20Schema.json",
+    "$schema": "https://raw.githubusercontent.com/DanielWillett/unturned-asset-file-vscode/refs/heads/master/Asset%20Spec/Asset%20Spec%20Schema.json",
     "Type": "SDG.Unturned.ItemPlaceableAsset, Assembly-CSharp",
     "DisplayName": "Placeable Item",
     "Parent": "SDG.Unturned.ItemAsset, Assembly-CSharp",
     "Docs": "https://docs.smartlydressedgames.com/en/stable/items/placeable-asset.html",
     "Category": "ITEM",
     "VanillaIdLimit": 2000,
+    "RequireId": true,
     "Properties":
     [
+        
     ],
     "Types":
     [
